--- a/package.json
+++ b/package.json
@@ -6,19 +6,26 @@
   "scripts": {
     "start": "webpack && node dist/bundle.js",
     "start:dev": "ts-node-dev src/index.ts",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Andrei Auchynnikau",
   "keywords": [],
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.7.9",
     "@types/webpack-node-externals": "^3.0.4",
     "eslint": "^9.13.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3",
     "ts-loader": "^9.5.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3",
+    "typescript-eslint": "^8.11.0",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
     "webpack-node-externals": "^3.0.0"
