--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.7.9",
     "@types/webpack-node-externals": "^3.0.4",
+    "@types/ws": "^8.5.12",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
